<resources>
    <string name="app_name">Challenge5_Afifuddin</string>
    <string name="login">Login</string>
    <string name="masukkan_email">Input Email</string>
    <string name="masukkan_password">Input Password</string>
    <string name="btn_login">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="registrasi">Registrasi</string>
    <string name="masukkan_username">Input Username</string>
    <string name="masukkan_kembali_password">Reinput Password</string>
    <string name="daftar">Daftar</string>
    <string name="input_password">Input Password</string>
    <string name="reinput_password">Reinput Password</string>
    <string name="input_username">Input Username</string>
    <string name="input_email">Input Email</string>
    <string name="welcome_username">Welcome, %s</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="username_profile">Username</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="detail">Detail</string>
    <string name="judul_film">Judul Film</string>
    <string name="tanggal">tanggal</string>
    <string name="_2000">(2000)</string>
    <string name="jargon">jargon</string>
    <string name="overview">Overview</string>
    <string name="_0">0%</string>
    <string name="user_score">User\nScore</string>
    <string name="now_showing">Now Showing</string>
    <string name="top_rated">Top Rated</string>
    <string name="new_password">new password</string>
    <string name="new_email">new email</string>
</resources>